# rules_jvm_external_devfork

./: RunTests_Windows.bat
private/: outdated.bat  pin.bat  pin.sh
private/lib/: urls.bzl
private/rules/: coursier.bzl  javadoc.bzl  jvm_import.bzl  maven_project_jar.bzl  maven_publish.bzl  pin_dependencies.bzl
private/tools/prebuilt/: BUILD
private/tools/rules_jvm_external/: BUILD
private/tools/rules_jvm_external/coursier/: BUILD.bazel
private/tools/rules_jvm_external/jar/: BUILD
private/tools/rules_jvm_external/javadoc/: BUILD
private/tools/rules_jvm_external/maven/: BUILD
private/tools/rules_jvm_external/resolver/: BUILD
private/windows/: BUILD.bazel  bat_binary.bzl  bat_launcher.bat  bat_launcher_maker.bat  concat_file.bat  runfiles.bat  utils.bzl
scripts/: BUILD
tests/: bazel_run_tests.sh
tests/com/github/bazelbuild/rules_jvm_external/: BUILD
tests/com/github/bazelbuild/rules_jvm_external/jar/: BUILD
tests/com/github/bazelbuild/rules_jvm_external/javadoc/: BUILD
tests/com/github/bazelbuild/rules_jvm_external/maven/: BUILD
tests/integration/java_export/: BUILD
